# WEB_HW7

EX-07/: config.ini  connect_db.py  init.py  main.py  models.py  mynotes.db  pyproject.toml  seed.py
EX-07/alembic/versions/: bd2c32e1e077_init.py
EX-07/database/: db.py  models.py
